# infosoud

./: .gitignore  LICENSE  README.md  pyproject.toml
infosoud/: __init__.py  __main__.py  client.py
