[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "infosoud"
version = "0.1.0"
description = "Czech court case lookup tool (infosoud.gov.cz)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{name = "pravnikovo.info"}]
keywords = ["czech", "court", "justice", "infosoud", "právní", "soud"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Natural Language :: Czech",
]
dependencies = ["requests>=2.20"]

[project.optional-dependencies]
web = ["flask>=2.0"]

[project.scripts]
infosoud = "infosoud.__main__:main"

[project.urls]
Homepage = "https://infosoud.pravnikovo.info"
Repository = "https://github.com/pravnikovo/infosoud"
